--- a/step1/docker-compose.yml
+++ b/step1/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
 
-  broker:
+  kafka:
     image: confluentinc/cp-kafka
-    hostname: broker
+    hostname: kafka
     depends_on:
       - zookeeper
     ports:
