--- a/step3/consumer/pom.xml
+++ b/step3/consumer/pom.xml
@@ -2,16 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.github.framiere</groupId>
+    <parent>
+        <groupId>com.github.framiere</groupId>
+        <artifactId>step3</artifactId>
+        <version>1.0.0</version>
+        <relativePath>..</relativePath>
+    </parent>
     <artifactId>simple-consumer</artifactId>
-    <version>1.0.0</version>
     <packaging>jar</packaging>
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    </properties>
     <dependencies>
         <dependency>
             <groupId>org.apache.kafka</groupId>
