--- a/step7/kafka.conf
+++ b/step7/kafka.conf
@@ -1,6 +1,6 @@
 [agent]
   ## Default data collection interval for all inputs
-  interval = "10s"
+  interval = "1s"
   flush_interval = "1s"
 
 
@@ -13,13 +13,13 @@
 ## Cluster
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_cluster_partition"
-  mbean        = "kafka.cluster:type=Partition,topic=*,partition=*,name=*"
+  mbean        = "kafka.cluster:type=Partition,topic=*,partition=*"
   tag_keys     = ["type","topic","partition"]
 ## Controller
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_controller_controller_channel_manager"
-  mbean        = "kafka.controller:type=ControllerChannelManager,broker-id=0,name=*"
-  tag_keys     = ["broker-id","name"]
+  mbean        = "kafka.controller:type=ControllerChannelManager,broker-id=0"
+  tag_keys     = ["broker-id"]
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_controller_controller_channel_manager"
   mbean        = "kafka.controller:type=ControllerChannelManager,name=*"
@@ -30,12 +30,14 @@
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_controller_kafka_controller"
   mbean        = "kafka.controller:type=KafkaController,name=*"
+  field_name   = "$1"
   tag_keys     = ["name"]
 ## Coordinator group
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_coordinator_group"
   mbean        = "kafka.coordinator.group:type=*,name=*"
-  tag_keys     = ["type","name"]
+  field_name   = "$2"
+  tag_keys     = ["type"]
 ## Coordinator transaction
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_coordinator_transaction"
@@ -79,8 +81,7 @@
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_network_request_metrics"
   mbean        = "kafka.network:type=RequestMetrics,request=*,name=*"
-  field_name   = "$2"
-  tag_keys     = ["request", "name"]
+  tag_keys     = ["request"]
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_network_socket_server"
   mbean        = "kafka.network:type=SocketServer,name=*"
@@ -119,12 +120,10 @@
   tag_keys     = ["clientId"]
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_server_replica_manager"
-  mbean        = "kafka.server:type=ReplicaManager,name=*"
-  tag_keys     = ["name"]
+  mbean        = "kafka.server:type=ReplicaManager"
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_server_session_expire_listener"
-  mbean        = "kafka.server:type=SessionExpireListener,name=*"
-  tag_keys     = ["name"]
+  mbean        = "kafka.server:type=SessionExpireListener"
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_server_zookeeper_client_metrics"
   mbean        = "kafka.server:type=ZooKeeperClientMetrics,name=*"
