--- a/step7/kafka.conf
+++ b/step7/kafka.conf
@@ -17,12 +17,13 @@
   tag_keys     = ["type","topic","partition"]
 ## Controller
 [[inputs.jolokia2_agent.metric]]
-  name         = "kafka_controller_controller_channel_manager"
+  name         = "kafka_controller_controller_channel_manager_by_broker"
   mbean        = "kafka.controller:type=ControllerChannelManager,broker-id=0"
   tag_keys     = ["broker-id"]
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_controller_controller_channel_manager"
   mbean        = "kafka.controller:type=ControllerChannelManager,name=*"
+  field_name   = "$1"
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_controller_controller_stats"
   mbean        = "kafka.controller:type=ControllerStats,name=*"
@@ -41,8 +42,8 @@
 ## Coordinator transaction
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_coordinator_transaction"
-  mbean        = "kafka.coordinator.transaction:type=*,name=*"
-  tag_keys     = ["type", "name"]
+  mbean        = "kafka.coordinator.transaction:type=*"
+  tag_keys     = ["type"]
 ## Kafka log
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_log_per_topic"
