--- a/step7/telegraf-inputs/consumer.conf
+++ b/step7/telegraf-inputs/consumer.conf
@@ -1,14 +1,6 @@
-[agent]
-  ## Default data collection interval for all inputs
-  interval = "1s"
-  flush_interval = "1s"
-
-
-# # Read JMX metrics from a Jolokia REST proxy endpoint
 [[inputs.jolokia2_agent]]
-  urls = ["http://127.0.0.1:8778/jolokia/"]
+  urls = ["http://consumer-1:8778/jolokia/"]
   tagexclude = ["jolokia_agent_*"]
-
 
 ## Consumer
 [[inputs.jolokia2_agent.metric]]
@@ -35,7 +27,3 @@
   name         = "kafka_consumer_kafka_metrics_count"
   mbean        = "kafka.consumer:type=kafka-metrics-count,client-id=*"
   tag_keys     = ["client-id"]
-
-
-[[outputs.file]]
-files = ["stdout"]
