--- a/step7/telegraf-inputs/zookeeper.conf
+++ b/step7/telegraf-inputs/zookeeper.conf
@@ -1,17 +1,16 @@
-#[[inputs.jolokia2_agent]]
-#  urls = ["http://zookeeper:8778/jolokia/"]
-#
-### Zookeeper
-#[[inputs.jolokia2_agent.metric]]
-#  name         = "zookeeper"
-#  mbean        = "org.apache.ZooKeeperService:name0=*"
-#  tag_keys     = ["name0"]
-#[[inputs.jolokia2_agent.metric]]
-#  name         = "zookeeper_InMemoryDataTree"
-#  mbean        = "org.apache.ZooKeeperService:name0=*,name1=InMemoryDataTree"
-#  tag_keys     = ["name0"]
-#[[inputs.jolokia2_agent.metric]]
-#  name         = "zookeeper_per_connection"
-#  mbean        = "org.apache.ZooKeeperService:name0=*,name1=Connections,name2=*,name3=*"
-#  tag_keys     = ["name0","name2","name3"]
-#
+[[inputs.jolokia2_agent]]
+  urls = ["http://zookeeper:8778/jolokia/"]
+
+## Zookeeper
+[[inputs.jolokia2_agent.metric]]
+  name         = "zookeeper"
+  mbean        = "org.apache.ZooKeeperService:name0=*"
+  tag_keys     = ["name0"]
+[[inputs.jolokia2_agent.metric]]
+  name         = "zookeeper_InMemoryDataTree"
+  mbean        = "org.apache.ZooKeeperService:name0=*,name1=InMemoryDataTree"
+  tag_keys     = ["name0"]
+[[inputs.jolokia2_agent.metric]]
+  name         = "zookeeper_per_connection"
+  mbean        = "org.apache.ZooKeeperService:name0=*,name1=Connections,name2=*,name3=*"
+  tag_keys     = ["name0","name2","name3"]
