--- a/step3/consumer/Dockerfile
+++ b/step3/consumer/Dockerfile
@@ -1,7 +1,7 @@
 FROM maven:3.5-jdk-8 as mavenBuild
 COPY pom.xml pom.xml
 COPY src src
-RUN ["mvn"]
+RUN ["mvn", "install"]
 
 FROM java:8
 COPY --from=mavenBuild ./target/*.jar ./
