more jvm metrics gathering

--- a/step7/telegraf-inputs/producer.conf
+++ b/step7/telegraf-inputs/producer.conf
@@ -1,36 +1,32 @@
 [[inputs.jolokia2_agent]]
-  urls = ["http://consumer-1:8778/jolokia/"]
+  urls = ["http://localhost:8778/jolokia/"]
   tagexclude = ["jolokia_agent_*"]
 
-## Consumer
+## Producer
 [[inputs.jolokia2_agent.metric]]
-  name         = "kafka_consumer_app_info"
-  mbean        = "kafka.consumer:type=app_info,id=*"
-  tag_keys     = ["id"]
-[[inputs.jolokia2_agent.metric]]
-  name         = "kafka_consumer_consumer_coordinator_metrics"
-  mbean        = "kafka.consumer:type=consumer-coordinator-metrics,client-id=*"
+  name         = "kafka_producer_app_info"
+  mbean        = "kafka.producer:type=app-info,client-id=*"
   tag_keys     = ["client-id"]
 [[inputs.jolokia2_agent.metric]]
-  name         = "kafka_consumer_fetch_manager_metrics"
-  mbean        = "kafka.consumer:type=consumer-fetch-manager-metrics,client-id=*"
+  name         = "kafka_producer_kafka_metrics_count"
+  mbean        = "kafka.producer:type=kafka-metrics-count,client-id=*"
   tag_keys     = ["client-id"]
 [[inputs.jolokia2_agent.metric]]
-  name         = "kafka_consumer_metrics"
-  mbean        = "kafka.consumer:type=consumer-metrics,client-id=*"
+  name         = "kafka_producer_producer_metrics"
+  mbean        = "kafka.producer:type=producer-metrics,client-id=*"
   tag_keys     = ["client-id"]
 [[inputs.jolokia2_agent.metric]]
-  name         = "kafka_consumer_node_metrics"
-  mbean        = "kafka.consumer:type=consumer-node-metrics,client-id=*,node-id=*"
-  tag_keys     = ["client-id","node-id"]
+  name         = "kafka_producer_producer_node_metrics"
+  mbean        = "kafka.producer:type=producer-node-metrics,client-id=*,node-id=*"
+  tag_keys     = ["client-id", "node-id"]
 [[inputs.jolokia2_agent.metric]]
-  name         = "kafka_consumer_kafka_metrics_count"
-  mbean        = "kafka.consumer:type=kafka-metrics-count,client-id=*"
-  tag_keys     = ["client-id"]
+  name         = "kafka_producer_producer_topic_metrics"
+  mbean        = "kafka.producer:type=producer-topic-metrics,client-id=*,topic=*"
+  tag_keys     = ["client-id", "topic"]
 
 ## JVM
 [[inputs.jolokia2_agent.metric]]
-name         = "java_lang_memory"
+  name         = "java_lang_memory"
   mbean        = "java.lang:type=Memory"
 [[inputs.jolokia2_agent.metric]]
   name         = "java_lang_memory_pool"
