--- a/step7/telegraf-inputs/zookeeper.conf
+++ b/step7/telegraf-inputs/zookeeper.conf
@@ -14,3 +14,23 @@
   name         = "zookeeper_per_connection"
   mbean        = "org.apache.ZooKeeperService:name0=*,name1=Connections,name2=*,name3=*"
   tag_keys     = ["name0","name2","name3"]
+
+## JVM
+[[inputs.jolokia2_agent.metric]]
+name         = "java_lang_memory"
+  mbean        = "java.lang:type=Memory"
+[[inputs.jolokia2_agent.metric]]
+  name         = "java_lang_memory_pool"
+  mbean        = "java.lang:type=MemoryPool,name=*"
+  paths        = ["Usage"]
+  tag_keys     = ["name"]
+[[inputs.jolokia2_agent.metric]]
+  name         = "java_lang_threading"
+  mbean        = "java.lang:type=Threading"
+  paths        = ["ThreadCount","PeakThreadCount","DaemonThreadCount"]
+[[inputs.jolokia2_agent.metric]]
+  name         = "java_lang_garbage_collector"
+  mbean        = "java.lang:type=GarbageCollector,name=*"
+  paths        = ["CollectionCount","CollectionTime"]
+  tag_keys     = ["name"]
+
