--- a/step7/telegraf-inputs/consumer.conf
+++ b/step7/telegraf-inputs/consumer.conf
@@ -1,5 +1,5 @@
 [[inputs.jolokia2_agent]]
-  urls = ["http://consumer-1:8778/jolokia/"]
+  urls = ["http://consumer:8778/jolokia/"]
   tagexclude = ["jolokia_agent_*"]
 
 ## Consumer
