--- a/step7/telegraf-inputs/producer.conf
+++ b/step7/telegraf-inputs/producer.conf
@@ -1,5 +1,5 @@
 [[inputs.jolokia2_agent]]
-  urls = ["http://localhost:8778/jolokia/"]
+  urls = ["http://producer:8778/jolokia/"]
   tagexclude = ["jolokia_agent_*"]
 
 ## Producer
