--- a/step7/telegraf-inputs/streams.conf
+++ b/step7/telegraf-inputs/streams.conf
@@ -1,6 +1,8 @@
 [[inputs.jolokia2_agent]]
-  urls = ["http://localhost:8778/jolokia/"]
+  urls = ["http://stream:8778/jolokia/"]
   tagexclude = ["jolokia_agent_*"]
+
+## The streaming engine is on top of the consumer and the producer apis
 
 ## Streams
 [[inputs.jolokia2_agent.metric]]
@@ -77,20 +79,20 @@
 
 ## JVM
 [[inputs.jolokia2_agent.metric]]
-name         = "java_lang_memory"
-mbean        = "java.lang:type=Memory"
+  name         = "java_lang_memory"
+  mbean        = "java.lang:type=Memory"
 [[inputs.jolokia2_agent.metric]]
-name         = "java_lang_memory_pool"
-mbean        = "java.lang:type=MemoryPool,name=*"
-paths        = ["Usage"]
-tag_keys     = ["name"]
+  name         = "java_lang_memory_pool"
+  mbean        = "java.lang:type=MemoryPool,name=*"
+  paths        = ["Usage"]
+  tag_keys     = ["name"]
 [[inputs.jolokia2_agent.metric]]
-name         = "java_lang_threading"
-mbean        = "java.lang:type=Threading"
-paths        = ["ThreadCount","PeakThreadCount","DaemonThreadCount"]
+  name         = "java_lang_threading"
+  mbean        = "java.lang:type=Threading"
+  paths        = ["ThreadCount","PeakThreadCount","DaemonThreadCount"]
 [[inputs.jolokia2_agent.metric]]
-name         = "java_lang_garbage_collector"
-mbean        = "java.lang:type=GarbageCollector,name=*"
-paths        = ["CollectionCount","CollectionTime"]
-tag_keys     = ["name"]
+  name         = "java_lang_garbage_collector"
+  mbean        = "java.lang:type=GarbageCollector,name=*"
+  paths        = ["CollectionCount","CollectionTime"]
+  tag_keys     = ["name"]
 
