reuse previous java samples

--- a/step6/streams/Dockerfile
+++ b/step6/streams/Dockerfile
@@ -6,5 +6,6 @@ RUN ["mvn", "install"]
 FROM confluentinc/cp-base
 COPY --from=mavenBuild ./target/*.jar ./
 ENV BROKER_LIST "kafka-1:9092,kafka-2:9092,kafka-3:9092"
-CMD [ "bash", "-c", "cub kafka-ready -b ${BROKER_LIST} 3 30 && java -jar *.jar ${BROKER_LIST}" ]
+ENV JAVA_OPTS ""
+CMD [ "bash", "-c", "cub kafka-ready -b ${BROKER_LIST} 3 30 && java ${JAVA_OPTS} -jar *.jar ${BROKER_LIST}" ]
 
