--- a/step7/telegraf-inputs/streams.conf
+++ b/step7/telegraf-inputs/streams.conf
@@ -1,5 +1,5 @@
 [[inputs.jolokia2_agent]]
-  urls = ["http://stream:8778/jolokia/"]
+  urls = ["http://streams:8778/jolokia/"]
   tagexclude = ["jolokia_agent_*"]
 
 ## The streaming engine is on top of the consumer and the producer apis
