--- a/step7/telegraf.conf
+++ b/step7/telegraf.conf
@@ -1,10 +1,10 @@
 [agent]
-interval = "1s"
-flush_interval= "1s"
+interval = "10s"
+flush_interval= "10s"
 
 [[outputs.kafka]]
 brokers = ["kafka-1:9092","kafka-2:9092","kafka-3:9092"]
 topic = "telegraf"
 
-[[outputs.file]]
-files = ["stdout"]
+##[[outputs.file]]
+##files = ["stdout"]
