--- a/step7/telegraf-inputs/kafka.conf
+++ b/step7/telegraf-inputs/kafka.conf
@@ -38,13 +38,13 @@
 ## Kafka log
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_log_per_topic"
-  mbean        = "kafka.log:type=*,topic=*,partition=*,name=*"
-  field_name   = "$4"
-  tag_keys     = ["type", "topic", "partition"]
+  mbean        = "kafka.log:type=Log,topic=*,partition=*,name=*"
+  field_name   = "$3"
+  tag_keys     = ["topic", "partition"]
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_log_log_cleaner"
   mbean        = "kafka.log:type=LogCleaner,name=*"
-  field_name   = "$2"
+  field_name   = "$1"
   tag_keys     = ["type", "name"]
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_log_log_manager_per_file"
@@ -55,6 +55,10 @@
   name         = "kafka_log_log_manager"
   mbean        = "kafka.log:type=LogManager,name=*"
   field_name   = "$1"
+[[inputs.jolokia2_agent.metric]]
+  name         = "kafka_log_log_flush_stats"
+  mbean        = "kafka.log:type=LogFlushStats,name=*"
+  tag_keys     = ["name"]
 ## Kafka network
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_network_per_processor"
@@ -73,7 +77,7 @@
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_network_request_metrics"
   mbean        = "kafka.network:type=RequestMetrics,request=*,name=*"
-  tag_keys     = ["request"]
+  tag_keys     = ["name", "request"]
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_network_socket_server"
   mbean        = "kafka.network:type=SocketServer,name=*"
@@ -112,7 +116,8 @@
   tag_keys     = ["clientId"]
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_server_replica_manager"
-  mbean        = "kafka.server:type=ReplicaManager"
+  mbean        = "kafka.server:type=ReplicaManager,name=*"
+  field_name   = "$1"
 [[inputs.jolokia2_agent.metric]]
   name         = "kafka_server_session_expire_listener"
   mbean        = "kafka.server:type=SessionExpireListener"
