--- a/step8/docker-compose.yml
+++ b/step8/docker-compose.yml
@@ -148,3 +148,46 @@ services:
       - kafka-2
       - kafka-3
       - influxdb
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.1.3
+    restart: on-failure
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    environment:
+      xpack.security.enabled: "false"
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:6.1.3
+    restart: on-failure
+    ports:
+      - "5601:5601"
+    environment:
+      xpack.security.enabled: "false"
+    depends_on:
+      - elasticsearch
+
+  kibana_index_pattern:
+    image: tutum/curl
+    command: |
+      bash -c "sleep 30 ; curl 'http://kibana:5601/es_admin/.kibana/index-pattern/logstash-*/_create' -H 'kbn-version: 5.5.2' -H 'content-type: application/json' --data-binary '{\"title\":\"logstash-*\",\"timeFieldName\":\"@timestamp\",\"notExpandable\":true}'"
+    depends_on:
+      - kibana
+
+  logstash:
+    image: logstash
+    restart: on-failure
+    command: -e "input { udp { port => 5000 codec => json } } filter { if [docker][image] =~ /^logstash/ {  drop { } } } output { elasticsearch { hosts => "elasticsearch" } }"
+    depends_on:
+      - elasticsearch
+
+  logspout:
+    image: bekt/logspout-logstash
+    restart: on-failure
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock
+    environment:
+      ROUTE_URIS: logstash://logstash:5000
+    depends_on:
+      - logstash
