--- a/step8/docker-compose.yml
+++ b/step8/docker-compose.yml
@@ -1,9 +1,9 @@
-version: '2'
+version: '3.4'
 services:
   jolokia:
     image: jolokia/java-jolokia
     volumes:
-      - /opt/jolokia/
+      - jolokia:/opt/jolokia/
 
   zookeeper:
     image: confluentinc/cp-zookeeper
@@ -11,8 +11,11 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       KAFKA_OPTS: "-javaagent:/opt/jolokia/jolokia.jar=host=0.0.0.0"
-    volumes_from: 
-      - jolokia
+    volumes:
+      - jolokia:/opt/jolokia/
+    healthcheck:
+      test: ["CMD", "bash", "-c", "echo ruok | nc localhost 2181 | grep imok"]
+      start_period: 30s
 
   kafka-1:
     image: confluentinc/cp-kafka
@@ -25,8 +28,11 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-1:9092
       KAFKA_DEFAULT_REPLICATION_FACTOR: 3
       KAFKA_OPTS: "-javaagent:/opt/jolokia/jolokia.jar=host=0.0.0.0"
-    volumes_from: 
-      - jolokia
+    volumes:
+      - jolokia:/opt/jolokia/
+    healthcheck:
+      test: ["CMD", "nc", "127.0.0.1", "9092"]
+      start_period: 30s
 
   kafka-2:
     image: confluentinc/cp-kafka
@@ -39,9 +45,12 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-2:9092
       KAFKA_DEFAULT_REPLICATION_FACTOR: 3
       KAFKA_OPTS: "-javaagent:/opt/jolokia/jolokia.jar=host=0.0.0.0"
-    volumes_from: 
-      - jolokia
-      
+    volumes:
+      - jolokia:/opt/jolokia/
+    healthcheck:
+      test: ["CMD", "nc", "127.0.0.1", "9092"]
+      start_period: 30s
+
   kafka-3:
     image: confluentinc/cp-kafka
     hostname: kafka-3
@@ -53,14 +62,20 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-3:9092
       KAFKA_DEFAULT_REPLICATION_FACTOR: 3
       KAFKA_OPTS: "-javaagent:/opt/jolokia/jolokia.jar=host=0.0.0.0"
-    volumes_from: 
-      - jolokia
+    volumes:
+      - jolokia:/opt/jolokia/
+    healthcheck:
+      test: ["CMD", "nc", "127.0.0.1", "9092"]
+      start_period: 30s
 
   telegraf-topic:
     image: confluentinc/cp-kafka
-    command: bash -c "cub kafka-ready -z zookeeper:2181 1 30 && kafka-topics --zookeeper zookeeper:2181 --create --topic telegraf --partitions 10 --replication-factor 3"
+    command: bash -c "cub kafka-ready -z zookeeper:2181 3 120 && kafka-topics --zookeeper zookeeper:2181 --create --topic telegraf --partitions 10 --replication-factor 3"
     depends_on:
       - zookeeper
+      - kafka-1
+      - kafka-2
+      - kafka-3
 
   telegraf:
     image: telegraf:1.5
@@ -80,8 +95,8 @@ services:
     build: ../step3/producer
     environment:
       JAVA_OPTS: "-javaagent:/opt/jolokia/jolokia.jar=host=0.0.0.0"
-    volumes_from:
-      - jolokia
+    volumes:
+      - jolokia:/opt/jolokia/
     depends_on:
       - kafka-1
       - kafka-2
@@ -91,8 +106,8 @@ services:
     build: ../step3/consumer
     environment:
       JAVA_OPTS: "-javaagent:/opt/jolokia/jolokia.jar=host=0.0.0.0"
-    volumes_from:
-      - jolokia
+    volumes:
+      - jolokia:/opt/jolokia/
     depends_on:
       - kafka-1
       - kafka-2
@@ -102,8 +117,8 @@ services:
     build: ../step6/streams
     environment:
       JAVA_OPTS: "-javaagent:/opt/jolokia/jolokia.jar=host=0.0.0.0"
-    volumes_from:
-      - jolokia
+    volumes:
+      - jolokia:/opt/jolokia/
     depends_on:
       - kafka-1
       - kafka-2
@@ -111,9 +126,12 @@ services:
       - telegraf
 
   influxdb:
-    image: influxdb:1.4.2
+    image: influxdb:1.4.3
     ports:
       - "8086:8086"
+    healthcheck:
+      test: ["CMD", "influx", "-host", "127.0.0.1", "-port", "8086", "-execute", "SHOW DATABASES"]
+      start_period: 30s
 
   chronograf:
     image: chronograf:1.4.0
@@ -132,6 +150,9 @@ services:
       - influxdb
     environment:
       GF_INSTALL_PLUGINS: jdbranham-diagram-panel,novalabs-annotations-panel,vonage-status-panel,bessler-pictureit-panel,grafana-piechart-panel
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000"]
+      start_period: 30s
 
   grafana-setup:
     build: grafana-setup/
@@ -157,6 +178,9 @@ services:
       - "9300:9300"
     environment:
       xpack.security.enabled: "false"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9200"]
+      start_period: 30s
 
   kibana:
     image: docker.elastic.co/kibana/kibana:6.1.3
@@ -167,6 +191,9 @@ services:
       xpack.security.enabled: "false"
     depends_on:
       - elasticsearch
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5601"]
+      start_period: 30s
 
   kibana_index_pattern:
     image: tutum/curl
@@ -191,3 +218,6 @@ services:
       ROUTE_URIS: logstash://logstash:5000
     depends_on:
       - logstash
+
+volumes:
+  jolokia:
