--- a/step9/docker-compose.yml
+++ b/step9/docker-compose.yml
@@ -54,13 +54,12 @@ services:
   mysql:
     image: mysql:5.7
     volumes:
-      - ./mysql-init.sql:/mysql-init.sql
+      - ../step9/mysql-init.sql:/docker-entrypoint-initdb.d/mysql-init.sql
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: db
       MYSQL_USER: user
       MYSQL_PASSWORD: password
-    command: --init-file /mysql-init.sql
 
   connect:
     image: confluentinc/cp-kafka-connect
