--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>step3</module>
         <module>step6</module>
-        <module>step18/streams</module>
+        <module>step18/streamjoins</module>
+        <module>step19/operationtomysql</module>
     </modules>
 </project>
