--- a/step15/docker-compose.yml
+++ b/step15/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.4'
 services:
   zookeeper:
-    image: confluentinc/cp-zookeeper
+    image: confluentinc/cp-zookeeper:4.1.0
     hostname: zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
@@ -10,7 +10,7 @@ services:
       start_period: 30s
 
   kafka-1:
-    image: confluentinc/cp-kafka
+    image: confluentinc/cp-kafka:4.1.0
     hostname: kafka-1
     depends_on:
       - zookeeper
@@ -24,7 +24,7 @@ services:
       start_period: 30s
 
   kafka-2:
-    image: confluentinc/cp-kafka
+    image: confluentinc/cp-kafka:4.1.0
     hostname: kafka-2
     depends_on:
       - zookeeper
@@ -38,7 +38,7 @@ services:
       start_period: 30s
 
   kafka-3:
-    image: confluentinc/cp-kafka
+    image: confluentinc/cp-kafka:4.1.0
     hostname: kafka-3
     depends_on:
       - zookeeper
@@ -52,7 +52,7 @@ services:
       start_period: 30s
 
   ksql-server:
-    image: "confluentinc/ksql-cli:0.5"
+    image: confluentinc/ksql-cli:0.5
     hostname: ksql-server
     depends_on:
       - kafka-1
@@ -61,14 +61,14 @@ services:
     volumes:
       - ./ksqlserver.properties:/etc/ksql/ksqlserver.properties
     ports:
-      - "8080:8080"
+      - "8088:8088"
     command: "ksql-server-start /etc/ksql/ksqlserver.properties"
     environment:
       KSQL_CONFIG_DIR: "/etc/ksql"
       KSQL_LOG4J_OPTS: "-Dlog4j.configuration=file:/etc/ksql/log4j-rolling.properties"
 
   ksql-cli:
-    image: "confluentinc/ksql-cli:0.5"
+    image: confluentinc/ksql-cli:0.5
     hostname: ksql-cli
     depends_on:
       - ksql-server
