--- a/step16/docker-compose.yml
+++ b/step16/docker-compose.yml
@@ -64,7 +64,7 @@ services:
       MYSQL_ROOT_HOST: 172.%  # Allow docker containers to connect to mysql
 
   schema-registry:
-    image: confluentinc/cp-schema-registry:4.0.0
+    image: confluentinc/cp-schema-registry
     ports:
       - "8082:8082"
     depends_on:
@@ -113,31 +113,15 @@ services:
       test: ["CMD", "nc", "127.0.0.1", "8083"]
       start_period: 30s
 
-  ksql-server:
-    image: "confluentinc/ksql-cli:0.5"
-    hostname: ksql-server
+  ksql:
+    image: confluentinc/cp-ksql-server:5.2.1
+    hostname: ksql-cli
     depends_on:
       - kafka-1
       - kafka-2
       - kafka-3
       - schema-registry
-    volumes:
-      - ./ksqlserver.properties:/etc/ksql/ksqlserver.properties
-    ports:
-      - "8088:8088"
-    command: "ksql-server-start /etc/ksql/ksqlserver.properties"
     environment:
-      KSQL_CONFIG_DIR: "/etc/ksql"
-      KSQL_LOG4J_OPTS: "-Dlog4j.configuration=file:/etc/ksql/log4j-rolling.properties"
-      STREAMS_SCHEMA_REGISTRY_HOST: schema-registry
-      STREAMS_SCHEMA_REGISTRY_PORT: 8081
-
-  ksql-cli:
-    image: "confluentinc/ksql-cli:0.5"
-    hostname: ksql-cli
-    depends_on:
-      - ksql-server
-    command: "perl -e 'while(1){ sleep 99999 }'"
-    environment:
-      KSQL_CONFIG_DIR: "/etc/ksql"
-      KSQL_LOG4J_OPTS: "-Dlog4j.configuration=file:/etc/ksql/log4j-rolling.properties"
+      KSQL_BOOTSTRAP_SERVERS: kafka-1:9092
+      KSQL_LISTENERS: http://0.0.0.0:8088
+      KSQL_KSQL_SCHEMA_REGISTRY_URL: http://schema-registry:8082
