--- a/step17/docker-compose.yml
+++ b/step17/docker-compose.yml
@@ -96,28 +96,13 @@ services:
       test: ["CMD", "nc", "127.0.0.1", "8083"]
       start_period: 30s
 
-  ksql-server:
-    image: "confluentinc/ksql-cli:0.5"
-    hostname: ksql-server
+  ksql:
+    image: confluentinc/cp-ksql-server:5.2.1
+    hostname: ksql-cli
     depends_on:
       - kafka-1
       - kafka-2
       - kafka-3
-    volumes:
-      - ../step16/ksqlserver.properties:/etc/ksql/ksqlserver.properties
-    ports:
-      - "8080:8080"
-    command: "ksql-server-start /etc/ksql/ksqlserver.properties"
     environment:
-      KSQL_CONFIG_DIR: "/etc/ksql"
-      KSQL_LOG4J_OPTS: "-Dlog4j.configuration=file:/etc/ksql/log4j-rolling.properties"
-
-  ksql-cli:
-    image: "confluentinc/ksql-cli:0.5"
-    hostname: ksql-cli
-    depends_on:
-      - ksql-server
-    command: "perl -e 'while(1){ sleep 99999 }'"
-    environment:
-      KSQL_CONFIG_DIR: "/etc/ksql"
-      KSQL_LOG4J_OPTS: "-Dlog4j.configuration=file:/etc/ksql/log4j-rolling.properties"
+      KSQL_BOOTSTRAP_SERVERS: kafka-1:9092
+      KSQL_LISTENERS: http://0.0.0.0:8088
