--- a/step10/docker-compose.yml
+++ b/step10/docker-compose.yml
@@ -62,7 +62,7 @@ services:
       MYSQL_PASSWORD: password
 
   schema-registry:
-    image: confluentinc/cp-schema-registry:4.0.0
+    image: confluentinc/cp-schema-registry
     ports:
       - "8082:8082"
     depends_on:
