specify logstash version

--- a/step8/docker-compose.yml
+++ b/step8/docker-compose.yml
@@ -203,7 +203,7 @@ services:
       - kibana
 
   logstash:
-    image: logstash
+    image: logstash:7.0.0
     restart: on-failure
     command: -e "input { udp { port => 5000 codec => json } } filter { if [docker][image] =~ /^logstash/ {  drop { } } } output { elasticsearch { hosts => "elasticsearch" } }"
     depends_on:
