--- a/step19/docker-compose.yml
+++ b/step19/docker-compose.yml
@@ -136,32 +136,6 @@ services:
       test: ["CMD", "nc", "127.0.0.1", "8083"]
       start_period: 30s
 
-  ksql-server:
-    image: "confluentinc/ksql-cli:5.0.0-beta1"
-    hostname: ksql-server
-    depends_on:
-      - kafka-1
-      - kafka-2
-      - kafka-3
-    volumes:
-      - ../step16/ksqlserver.properties:/etc/ksql/ksqlserver.properties
-    ports:
-      - "8088:8088"
-    command: "ksql-server-start /etc/ksql/ksqlserver.properties"
-    environment:
-      KSQL_CONFIG_DIR: "/etc/ksql"
-      KSQL_LOG4J_OPTS: "-Dlog4j.configuration=file:/etc/ksql/log4j-rolling.properties"
-
-  ksql-cli:
-    image: "confluentinc/ksql-cli:5.0.0-beta1"
-    hostname: ksql-cli
-    depends_on:
-      - ksql-server
-    command: "perl -e 'while(1){ sleep 99999 }'"
-    environment:
-      KSQL_CONFIG_DIR: "/etc/ksql"
-      KSQL_LOG4J_OPTS: "-Dlog4j.configuration=file:/etc/ksql/log4j-rolling.properties"
-
   producer:
     build: ../step18/streamjoins/
     environment:
@@ -218,7 +192,7 @@ services:
       - kafka-3
 
   kafka-to-influxdb:
-    image: telegraf:1.6.2
+    image: telegraf:1.8
     restart: unless-stopped
     volumes:
       - ../step8/telegraf-kafka-to-influxdb.conf:/etc/telegraf/telegraf.conf:ro
@@ -229,7 +203,7 @@ services:
       - influxdb
 
   ksql-json-to-influxdb:
-    image: telegraf:1.6.2
+    image: telegraf:1.8
     restart: unless-stopped
     volumes:
       - ./ksql-json-to-influxdb.conf:/etc/telegraf/telegraf.conf:ro
@@ -239,27 +213,35 @@ services:
       - kafka-3
       - influxdb
 
+  ksql:
+    image: confluentinc/cp-ksql-server:5.2.1
+    hostname: ksql-cli
+    depends_on:
+      - kafka-1
+      - kafka-2
+      - kafka-3
+    ports:
+      - "8088:8088"
+    environment:
+      KSQL_BOOTSTRAP_SERVERS: kafka-1:9092
+      KSQL_LISTENERS: http://0.0.0.0:8088
+
   control-center:
-    image: confluentinc/cp-enterprise-control-center:5.0.0-beta1-2
+    image: confluentinc/cp-enterprise-control-center:5.2.1
+    container_name: control-center
     restart: always
     depends_on:
       - zookeeper
       - kafka-1
       - kafka-2
       - kafka-3
-      - connect
-      - ksql-server
+      - ksql
     ports:
       - "9021:9021"
     environment:
-      CONTROL_CENTER_BOOTSTRAP_SERVERS: "kafka-1:9092,kafka-2:9092,kafka-3:9092"
+      CONTROL_CENTER_BOOTSTRAP_SERVERS: "kafka-1:9091,kafka-2:9092"
       CONTROL_CENTER_ZOOKEEPER_CONNECT: "zookeeper:2181"
-      CONTROL_CENTER_REPLICATION_FACTOR: 2
-      CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_REPLICATION: 2
-      CONTROL_CENTER_INTERNAL_TOPICS_REPLICATION: 2
-      CONTROL_CENTER_COMMAND_TOPIC_REPLICATION: 2
-      CONTROL_CENTER_METRICS_TOPIC_REPLICATION: 2
-      CONTROL_CENTER_STREAMS_NUM_STREAM_THREADS: 2
-      CONTROL_CENTER_CONNECT_CLUSTER: "connect:8083"
-      CONTROL_CENTER_KSQL_ENDPOINT: "http://ksql-server:8088"
-      CONTROL_CENTER_STREAMS_CONSUMER_REQUEST_TIMEOUT_MS: "960032"
+      CONTROL_CENTER_KSQL_URL: "http://ksql:8088"
+      CONTROL_CENTER_REST_LISTENERS: "http://0.0.0.0:9021"
+      CONTROL_CENTER_KSQL_ADVERTISED_URL: "http://localhost:8088"
+      CONTROL_CENTER_REPLICATION_FACTOR: 3
